This file documents the revision history for Perl extension Test-DBIx-Class.

0.49 02 November 2016

    - General release after no problems with developer release.

0.48_01 27 October 2016

    - Switch to Test::Postgresql58 to retain Perl 5.8 support
      with Postgres.

0.47 22 February 2016

    - Added support for deploy_opts->*->sources.

0.46 22 February 2016

    - Allow dropping of real views created. (VadimPushtaev)

0.45 03 October 2015
    - Another test fix

0.44 02 October 2015
    - Test fixes (colinnewell)

0.43 03 November 2014
    - Documentation fixes (felliot)
    - bug fixes in the mysql trait (felliot)
    - quiet down Postgresql pointless warnings (felliot)
    - fix RT 75247 (felliot)
    - Fixed bad test cases (felliot)
    - Replaced Test::Postgresql dependency with Test::PostgreSQL for those
      wanting to test Postgres. (colinnewell)

0.42 13 Aug 2014
    - Fixed issue where a resultset isn't properly 'reset'
    - documentation improvements

0.41 21 Jan 2014
    - Change Moose load_class() (now deprecated) to Module::Runtime use_module()

0.40 30 May 2013
    - Add a dependency when using Postgresql so that Pg tests complete
      properly (felliott++)

0.39 15 April 2013
    - New Options to better control how SQLT is configured.  (mattp++)
    - don't forget to finish you taxes (USA only)

0.38 30 November 2012
    - New feature: You can now fail instead of skipping a test if the
      schema fails to initialize and connect. (colinnewell++)

0.37 07 November 2012
    - More typo fixes (oalders++)

0.36 06 November 2012
    - POD updates (oalders++)
    - updated contributors
    - don't forget to vote!

0.35 05 November 2012
    - ::Example::Schema::Result::Person's email column is now nullable as
      intended (abraxxa++)

0.34 05 July 2012
    - new configure option to let you specify a pre-existing $schema, rather
      than let Test::DBIx::Class build one for you.  Might be useful in sub